--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
   open_file: ^3.5.10
   path_provider: ^2.1.5
   pdf: ^3.11.1
+  printing: ^5.13.4
   provider: ^6.1.2
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
