--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   pdf: ^3.11.1
   printing: ^5.13.4
   provider: ^6.1.2
+  shared_preferences: ^2.3.4
   universal_html: ^2.2.4
 
 dev_dependencies:
